--- a/Syntax_Kotlin/Mini_Project_Android/app/build.gradle
+++ b/Syntax_Kotlin/Mini_Project_Android/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation group: 'com.android.support', name: 'design', version: '28.0.0-rc02'
     implementation group: 'com.android.support', name: 'support-v4', version: '28.0.0-rc02'
+    implementation 'com.j256.ormlite:ormlite-android:5.0'
 }
