--- a/Syntax_Kotlin/Mini_Project_Android/app/src/main/AndroidManifest.xml
+++ b/Syntax_Kotlin/Mini_Project_Android/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vdabcursist.mini_project_android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".App">
         <activity
             android:name=".Login"
             android:theme="@style/AppTheme">
@@ -19,7 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainMenu" />
-        <activity android:name=".Register"></activity>
+        <activity android:name=".Register" />
+        <activity android:name=".CreateList" />
+        <activity android:name=".Lists"></activity>
     </application>
 
 </manifest>
