--- a/Syntax_Kotlin/Mini_Project_Android/app/src/main/AndroidManifest.xml
+++ b/Syntax_Kotlin/Mini_Project_Android/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         </activity>
         <activity android:name=".MainMenu" />
         <activity android:name=".Register" />
-        <activity android:name=".CreateList" />
-        <activity android:name=".Lists"></activity>
+        <activity android:name=".EditList" />
+        <activity android:name=".List"></activity>
     </application>
 
 </manifest>
